# hack-e-etica-2026

./: .env  .env.example  .gitignore  QUALITY_REPORT.md  README.md  docker-compose.yml  netlify.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  package.json  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 63ebd811a7d9_static_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  dashboard.py  insights.py  notifications.py  projects.py  reports.py  tasks.py  teams.py  time_logs.py  users.py  workload.py
backend/app/core/: config.py  database.py  permissions.py  security.py
backend/app/models/: entities.py  insight.py  notification.py  project.py  refresh_token.py  task.py  team.py  time_log.py  user.py
backend/app/schemas/: auth.py  common.py  domain.py  project.py  task.py  team.py  time_log.py  user.py
backend/app/services/: auth_service.py  domain_service.py  workload_service.py
backend/prisma/: prisma.module.ts  prisma.service.ts  schema.prisma
backend/scripts/: create_admin.py  start.sh
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/auth/dto/: login.dto.ts  register.dto.ts
backend/src/auth/guards/: jwt.guard.ts
backend/src/auth/strategies/: jwt.strategy.ts
backend/tests/: conftest.py  test_auth.py  test_authorization_contracts.py  test_permissions_workload.py
frontend/: .gitignore  (+8 more)
(+28 files in other folders)
