[project]
name = "flowlog-ai-backend"
version = "1.0.0"
description = "API de gestão operacional FlowLog AI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1", "uvicorn[standard]>=0.34,<1", "sqlmodel>=0.0.24,<0.1",
  "asyncpg>=0.30,<1", "alembic>=1.15,<2", "pydantic-settings>=2.8,<3",
  "pyjwt>=2.10,<3", "pwdlib[argon2]>=0.2,<1", "email-validator>=2.2,<3",
  "slowapi>=0.1.9,<1", "python-multipart>=0.0.20,<1"
]

[project.optional-dependencies]
dev = ["aiosqlite>=0.21,<1", "httpx>=0.28,<1", "pytest>=9.0.3,<10", "pytest-asyncio>=1,<2", "pytest-cov>=7,<8", "ruff>=0.11,<1", "mypy>=1.15,<2"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501", "E701", "E702", "B008", "UP046", "I001"]
[tool.ruff.format]
quote-style = "double"
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
[tool.mypy]
python_version = "3.12"
strict = false
plugins = ["pydantic.mypy"]
disable_error_code = ["attr-defined", "arg-type", "union-attr", "return-value", "list-item", "operator", "misc", "index", "call-overload"]
